Fix word wrapping
No longer breaks words if could fit on next line

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ cite {
 }
 
 #monument p {
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 /* date field */
